Security starter module and project service demo